# spinup

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  LICENSE-COMMERCIAL.md  README.md  go.work  go.work.sum  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  docs.yml  licenses.yml  release-chart.yml  release-images.yml
apps/ui/: README.md  THIRD-PARTY-NOTICES.md  package.json  svelte.config.js  vite.config.ts
builders/go/: Dockerfile  README.md  entrypoint.sh
builders/js/: Dockerfile  entrypoint.sh
charts/: index.yaml  spinup-0.1.0-alpha.1.tgz  spinup-0.1.0-alpha.10.tgz  spinup-0.1.0-alpha.11.tgz  spinup-0.1.0-alpha.12.tgz  spinup-0.1.0-alpha.13.tgz  spinup-0.1.0-alpha.14.tgz  spinup-0.1.0-alpha.15.tgz  spinup-0.1.0-alpha.16.tgz  spinup-0.1.0-alpha.17.tgz  spinup-0.1.0-alpha.18.tgz  spinup-0.1.0-alpha.19.tgz  spinup-0.1.0-alpha.2.tgz  spinup-0.1.0-alpha.20.tgz  spinup-0.1.0-alpha.21.tgz  spinup-0.1.0-alpha.22.tgz  spinup-0.1.0-alpha.23.tgz  spinup-0.1.0-alpha.24.tgz  spinup-0.1.0-alpha.25.tgz  spinup-0.1.0-alpha.26.tgz  spinup-0.1.0-alpha.3.tgz  spinup-0.1.0-alpha.4.tgz  spinup-0.1.0-alpha.5.tgz  spinup-0.1.0-alpha.6.tgz  spinup-0.1.0-alpha.7.tgz  spinup-0.1.0-alpha.8.tgz  spinup-0.1.0-alpha.9.tgz
docs/: README.md  THIRD-PARTY-NOTICES.md  index.md  license.md  package.json  scaling-roadmap.md
docs/public/: CNAME
scripts/: dev-cluster.sh  gen-third-party-notices.sh
services/worker/: Cargo.toml  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml
services/worker/src/: config.rs  loader.rs  main.rs  router.rs  runtime.rs  server.rs
(+132 files in other folders)
